@@ -34,8 +34,6 @@
 	- CHANGELOG
 	- backup/restore
 
- - Re-evaluate use of x.x.x.x:80 vs *:80 with Apache 2.4
-	- http://virtualmin.com/node/33860
-
  - Backup to Google Cloud Files & Dropbox
 	- Cloudmin too
+	- CHANGELOG
