@@ -1465,3 +1465,4 @@ Automatic cleanup of messages in all mailboxes and folders can now be setup in V
 If Postfix and Dovecot are setup to use SSL, they will be configured to use the certificate belonging to virtual servers with their own private IP address for connections to that IP.
 ---- Changes since 4.11 ----
 Updated the Piwik script installer to version 2.7.0, Joomla to 3.3.6 and 2.5.27, Ghost to 0.5.2, Roundcube to 1.0.3, phpMyFAQ to 2.8.15, Zikula to 1.3.9, phpMyAdmin to 4.2.9.1, 4.1.14.5 and 4.0.10.4, DokuWiki to 2014-09-29, Dolibarr to 3.6.1, SMF to 2.0.9, and MediaWiki to 1.23.5 and 1.19.20.
+On systems running Apache 2.4 and above, VirtualHost blocks are now created with an IP address instead of *.
